--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-starter",
+  "name": "nextjs-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,12 @@
     "prod": "next export"
   },
   "dependencies": {
-    "date-fns": "^2.13.0",
+    "date-fns": "^2.15.0",
     "gray-matter": "^4.0.2",
-    "next": "9.3.5",
+    "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "remark": "^12.0.0",
-    "remark-html": "^11.0.1"
+    "remark": "^12.0.1",
+    "remark-html": "^12.0.0"
   }
 }
