Fix github actions

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,4 +17,4 @@ jobs:
         run: yarn install
 
       - name: Build production app
-        run: yarn build && yarn prod
+        run: yarn build
